...
  Row(
    modifier = modifier.fillMaxWidth(),
    horizontalArrangement = Arrangement.spacedBy(4.dp)
  ) {
    listOf(
      TransactionType.EXPENSE to "Expense" to SignalNegative,
      TransactionType.INCOME to "Income" to SignalPositive
    ).forEach { option ->
      val type = option.first.first
      val label = option.first.second
      val color = option.second
      val isSelected = selected == type
      Surface(
...
